Fix window menu size problems when the content doesn't fit on the screen

--- a/src/wirecloud/defaulttheme/static/css/window_menu.scss
+++ b/src/wirecloud/defaulttheme/static/css/window_menu.scss
@@ -28,6 +28,7 @@
     overflow: hidden;
     font-weight: normal;
     width: 560px;
+    box-sizing: border-box;
 }
 
 .window_menu > .window_top {
@@ -49,6 +50,10 @@
     margin-top: ((($headings-line-height * $font-size-h3) - 20px) / 2);
     float: right;
     font-size: 20px;
+}
+
+.window_menu > .window_content {
+    box-sizing: border-box;
 }
 
 .window_menu > .window_content, .window_menu > .styled_form > div > table {
