--- a/src/wirecloud/defaulttheme/static/css/windowmenues/logwindowmenu.scss
+++ b/src/wirecloud/defaulttheme/static/css/windowmenues/logwindowmenu.scss
@@ -1,9 +1,5 @@
 @import 'variables';
 
-.window_menu.logwindowmenu > .window_content {
-    height: 400px;
-}
-
 .window_menu.logwindowmenu > .window_content > .alert > strong {
     font-size: 85%;
     margin-right: 2ex;
